--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Acertos e Tentativas</title>
+    <title>Equipe de Robótica</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #f0f0f0;
         }
 
         main {
@@ -22,16 +23,28 @@
             border: 1px solid #ccc;
             border-radius: 10px;
             width: 30%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
             margin-top: 0;
+            color: #333;
         }
 
         input[type="number"] {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
         button {
@@ -46,41 +59,125 @@
         button:hover {
             background-color: #3e8e41;
         }
+
+        #historico-lista, #arquivos-lista {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        #historico-lista li, #arquivos-lista li {
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        #historico-lista li:last-child, #arquivos-lista li:last-child {
+            border-bottom: none;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Calculadora de Acertos e Tentativas</h1>
+        <h1>Equipe de Robótica</h1>
     </header>
     <main>
         <section id="calculadora">
             <h2>Calculadora</h2>
-            <input type="number" id="acertos" placeholder="Acertos">
-            <input type="number" id="tentativas" placeholder="Tentativas">
+            <input type="number" id="num1" placeholder="Número 1">
+            <input type="number" id="num2" placeholder="Número 2">
+            <select id="operacao">
+                <option value="+">+</option>
+                <option value="-">-</option>
+                <option value="*">*</option>
+                <option value="/">/</option>
+            </select>
             <button id="calcular">Calcular</button>
             <p id="resultado"></p>
         </section>
+        <section id="historico">
+            <h2>Histórico</h2>
+            <ul id="historico-lista"></ul>
+            <button id="limpar-historico">Limpar Histórico</button>
+        </section>
+        <section id="armazenamento">
+            <h2>Armazenamento de Arquivos</h2>
+            <input type="file" id="arquivo">
+            <button id="upload">Upload</button>
+            <ul id="arquivos-lista"></ul>
+        </section>
     </main>
     <script>
-        const acertosInput = document.getElementById('acertos');
-        const tentativasInput = document.getElementById('tentativas');
+        // Calculadora
+        const num1Input = document.getElementById('num1');
+        const num2Input = document.getElementById('num2');
+        const operacaoSelect = document.getElementById('operacao');
         const calcularButton = document.getElementById('calcular');
         const resultadoP = document.getElementById('resultado');
+        const historicoLista = document.getElementById('historico-lista');
+        const limparHistoricoButton = document.getElementById('limpar-historico');
 
         calcularButton.addEventListener('click', () => {
-            const acertos = parseInt(acertosInput.value);
-            const tentativas = parseInt(tentativasInput.value);
+            const num1 = parseFloat(num1Input.value);
+            const num2 = parseFloat(num2Input.value);
+            const operacao = operacaoSelect.value;
 
-            if (tentativas === 0) {
-                resultadoP.textContent = 'Erro: Não é possível calcular a porcentagem com 0 tentativas!';
-                return;
+            let resultado;
+            switch (operacao) {
+                case '+':
+                    resultado = num1 + num2;
+                    break;
+                case '-':
+                    resultado = num1 - num2;
+                    break;
+                case '*':
+                    resultado = num1 * num2;
+                    break;
+                case '/':
+                    if (num2 !== 0) {
+                        resultado = num1 / num2;
+                    } else {
+                        resultado = 'Erro: Divisão por zero!';
+                    }
+                    break;
+                default:
+                    resultado = 'Erro!';
             }
 
-            const porcentagemAcertos = (acertos / tentativas) * 100;
-            const porcentagemErros = 100 - porcentagemAcertos;
+            resultadoP.textContent = `Resultado: ${resultado}`;
 
-            resultadoP.textContent = `Porcentagem de Acertos: ${porcentagemAcertos.toFixed(2)}%`;
-            resultadoP.textContent += `\nPorcentagem de Erros: ${porcentagemErros.toFixed(2)}%`;
+                       // Adicione o resultado ao histórico
+            const historicoListItem = document.createElement('li');
+            historicoListItem.textContent = `${num1} ${operacao} ${num2} = ${resultado}`;
+            historicoLista.appendChild(historicoListItem);
+        });
+
+        limparHistoricoButton.addEventListener('click', () => {
+            historicoLista.innerHTML = '';
+        });
+
+        // Armazenamento de Arquivos
+        const arquivoInput = document.getElementById('arquivo');
+        const uploadButton = document.getElementById('upload');
+        const arquivosLista = document.getElementById('arquivos-lista');
+
+        uploadButton.addEventListener('click', () => {
+            const arquivo = arquivoInput.files[0];
+            const formData = new FormData();
+            formData.append('arquivo', arquivo);
+
+            fetch('/upload', {
+                method: 'POST',
+                body: formData
+            })
+            .then((response) => response.json())
+            .then((data) => {
+                console.log(data);
+                // Adicione o arquivo à lista de arquivos
+                const arquivoListItem = document.createElement('li');
+                arquivoListItem.textContent = arquivo.name;
+                arquivosLista.appendChild(arquivoListItem);
+            })
+            .catch((error) => console.error(error));
         });
     </script>
 </body>
